--- a/grafana-provisioning/dashboards/dashboard.yaml
+++ b/grafana-provisioning/dashboards/dashboard.yaml
@@ -7,5 +7,6 @@ providers:
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
+    allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
