--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -33,3 +33,19 @@ scrape_configs:
     static_configs:
       - targets:
           - postgres-exporter:9187
+
+  - job_name: cadvisor
+    honor_timestamps: true
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    static_configs:
+      - targets:
+          - cadvisor:8080
+
+  - job_name: nginx
+    honor_timestamps: true
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    static_configs:
+      - targets:
+          - 'prometheus-node-exporter:9100'
