--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,12 +85,15 @@ services:
       dockerfile: Dockerfile
     deploy:
       replicas: 3
+    networks:
+      - monitoring
   nginx:
     container_name: nginx
     image: nginx:latest
     depends_on:
       - app
     ports:
+      - '80:80'
       - '8080:8080'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -105,9 +108,11 @@ services:
       - nginx
       - prometheus
     command:
-      - -nginx.scrape-uri=https://nginx:8080/stub_status
+      - --nginx.scrape-uri=https://nginx:8080/stub_status
     networks:
       - monitoring
+    ports:
+      - '9113:9113'
 
 networks:
   monitoring:
