--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
     }
 
     server {
-        listen 8080;
+        listen 80;
         # Feel free to adjust the max_body_size, default is 2M which might be too low, compared to the pure Node.js service
         client_max_body_size 20M;
 
@@ -16,6 +16,14 @@ http {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+        }
+    }
+
+    server {
+        listen 8080;
+        
+        location /stub_status {
+            stub_status on;
         }
     }
 }
