--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -48,4 +48,4 @@ scrape_configs:
     scrape_timeout: 10s
     static_configs:
       - targets:
-          - 'prometheus-node-exporter:9100'
+          - prometheus-nginx-exporter:9113
